Fixing the home bg-img white space

--- a/styles.css
+++ b/styles.css
@@ -196,7 +196,6 @@ nav {
   height: 100vh;
   font-family: "Ubuntu", sans-serif;
   -webkit-text-stroke: 0.5px hsl(0, 0%, 100%);
-  overflow-y: hidden;
 }
 
 .home .bg-img {
